--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 
     </head>
     <body>
-        
+        <header class="header">
+            <div class="header__menu">
+                <div class="menu__elem menu__elem_activ">
+                    
+                </div>
+            </div>        
+        </header>
+        <main>
+
+        </main>
     </body>
 </html>
